# testforge

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/testforge-cli/: Cargo.toml
crates/testforge-cli/src/: main.rs
crates/testforge-cli/src/commands/: ci.rs  gen_tests.rs  index.rs  init.rs  mod.rs  search.rs  serve.rs  status.rs
crates/testforge-core/: Cargo.toml
crates/testforge-core/src/: config.rs  error.rs  lib.rs  models.rs
crates/testforge-indexer/: Cargo.toml
crates/testforge-indexer/src/: graph.rs  languages.rs  lib.rs  parser.rs  store.rs  symbols.rs  walker.rs  watcher.rs
crates/testforge-python/: Cargo.toml
crates/testforge-python/src/: lib.rs
crates/testforge-search/: Cargo.toml
crates/testforge-search/src/: hybrid.rs  lib.rs  ranking.rs  text_search.rs  vector_store.rs
crates/testforge-server/: Cargo.toml
crates/testforge-server/src/: lib.rs  state.rs
crates/testforge-server/src/routes/: generate.rs  health.rs  index.rs  mod.rs  search.rs  symbols.rs
crates/testforge-server/src/ws/: mod.rs
docker/: Dockerfile  docker-compose.yml
docs/: api-reference.md  architecture.md  configuration.md  contributing.md  getting-started.md
python/testforge_ai/: __init__.py  bridge.py  cli.py  cli_gen.py
python/testforge_ai/analysis/: __init__.py  complexity.py  context.py
python/testforge_ai/embeddings/: __init__.py  cache.py  local.py  pipeline.py  provider.py
python/testforge_ai/generator/: __init__.py  engine.py  post_process.py
python/testforge_ai/generator/prompts/: __init__.py  edge_cases.py  integration.py  languages.py  mock_builder.py  post_process.py  unit_test.py
python/testforge_ai/generator/providers/: __init__.py  claude.py
tests/: conftest.py  test_gen_pipeline.py  test_generation.py  test_indexing.py  test_pipeline.py  test_search.py
tests/fixtures/go-cli-app/: main.go
tests/fixtures/java-spring-app/: ProductService.java
tests/fixtures/python-flask-app/src/: auth.py  users.py
vscode-extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/src/api/: client.ts
vscode-extension/src/commands/: generateTests.ts  indexProject.ts  search.ts
vscode-extension/src/providers/: searchView.ts  statusBar.ts
vscode-extension/src/utils/: config.ts
