[workspace]
resolver = "2"
members = [
    "crates/testforge-core",
    "crates/testforge-indexer",
    "crates/testforge-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TestForge Contributors"]
license = "MIT"
repository = "https://github.com/cyrus937/testforge"
description = "AI-powered semantic code search and test generation"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"