[workspace]
resolver = "2"
members = [
    "crates/testforge-core",
    "crates/testforge-indexer",
    "crates/testforge-search",
    "crates/testforge-server",
    "crates/testforge-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cyrille"]
license = "MIT"
repository = "https://github.com/cyrus937/testforge"
description = "Semantic code search and AI-powered test generation"
rust-version = "1.75"

[workspace.dependencies]
# Serialization & error handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web server
axum = { version = "0.7", features = ["ws", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Config & data
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Parsing (tree-sitter)
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"

# Filesystem
notify = { version = "7.0", features = ["serde"] }
ignore = "0.4"
sha2 = "0.10"
walkdir = "2.5"

# Search
tantivy = "0.22"
ordered-float = "4.5"
parking_lot = "0.12"
rayon = "1.10"

# CLI
clap = { version = "4.5", features = ["derive", "env", "color"] }
colored = "2.1"
indicatif = "0.17"
tabled = "0.16"

# Python bridge
pyo3 = { version = "0.22", features = ["extension-module"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true