[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "testforge"
version = "0.1.0"
description = "Semantic code search and AI-powered test generation"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TestForge Contributors" }]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "sentence-transformers>=2.7.0",
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.9.0",
    "rich>=13.9.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7.0",
    "mypy>=1.13",
]

[project.scripts]
testforge-ai = "testforge_ai.cli:main"

[tool.maturin]
manifest-path = "crates/testforge-python/Cargo.toml"
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "testforge_ai._rust"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
