[package]
name = "testforge-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for TestForge"

[[bin]]
name = "testforge"
path = "src/main.rs"

[dependencies]
testforge-core = { path = "../testforge-core" }
testforge-indexer = { path = "../testforge-indexer" }

clap.workspace = true
colored.workspace = true
indicatif.workspace = true
tabled.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true
