[package]
name = "testforge-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types, configuration, and error handling for TestForge"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = "1.1.2+spec-1.1.0"
directories = "6"
chrono = { version = "0.4", features = ["serde"] }