[package]
name = "testforge-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types, configuration, and error handling for TestForge"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3.14"
