[package]
name = "testforge-indexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Code parsing, AST analysis, and symbol extraction for TestForge"

[dependencies]
testforge-core = { path = "../testforge-core" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
streaming-iterator = "0.1"

# AST parsing
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"

# File system
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
ignore = "0.4"           # Respects .gitignore
rayon = "1"              # Parallel indexing
chrono = { version = "0.4", features = ["serde"] }