[package]
name = "testforge-indexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AST-based code parser and symbol extractor for TestForge"

[dependencies]
testforge-core = { path = "../testforge-core" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true

# Parsing
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-rust.workspace = true

# Filesystem
ignore.workspace = true
sha2.workspace = true
walkdir.workspace = true
notify.workspace = true

# Database
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3.14"
