[package]
name = "testforge-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Semantic, full-text, and hybrid search engine for TestForge"

[dependencies]
testforge-core = { path = "../testforge-core" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Full-text search
tantivy.workspace = true

# Vector math & concurrency
ordered-float.workspace = true
parking_lot.workspace = true
rayon.workspace = true

# Storage
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3.14"
rand = "0.8"