[package]
name = "testforge-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REST API server for TestForge with WebSocket progress streaming"

[dependencies]
testforge-core = { path = "../testforge-core" }
testforge-indexer = { path = "../testforge-indexer" }
testforge-search = { path = "../testforge-search" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true

# Web
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }